Clicking "Attach New File" in bugzilla is broken
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox71 | --- | unaffected |
| firefox72 | --- | verified |
People
(Reporter: mikokm, Assigned: jdai)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Clicking "Attach New File" in bugzilla does nothing. Reproduced with Nightly 20191122091512 on macOS 10.14.
Mozregression indicates that this was regressed by bug 1551758.
10:52.58 INFO: Narrowed inbound regression window from [53119986, fa7c7f46] (3 builds) to [53119986, 1f77dd98] (2 builds) (~1 steps left)
10:52.58 INFO: No more inbound revisions, bisection finished.
10:52.59 INFO: Last good revision: 53119986f129bc2520e5ae25ba2a3096d2310036
10:52.59 INFO: First bad revision: 1f77dd98df61bb0b6c5ce53befbb98635fe4eed8
10:52.59 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=53119986f129bc2520e5ae25ba2a3096d2310036&tochange=1f77dd98df61bb0b6c5ce53befbb98635fe4eed8
:jdai, could you take a look?
| Assignee | ||
Comment 1•5 years ago
•
|
||
Thank you for reporting this issue.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
•
|
||
It has a button element with button type under an a element with href. The problem is it shouldn't preventDefault to the button element with button type[1]. Should follow the spec[2] said do nothing.
[1] https://searchfox.org/mozilla-central/rev/3483fb259b4edbe4594cfcc3911db97d5441b67d/dom/html/HTMLButtonElement.cpp#261
[2] https://html.spec.whatwg.org/#attr-button-type-button-state
| Assignee | ||
Comment 3•5 years ago
|
||
Comment 5•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 6•5 years ago
|
||
Managed to reproduce the issue on Fx72.0a1 buildID 20191122214053.
The issue is verified fixed using Fx73.0a1 and Fx72.0b11 on macOS 10.14, Ubuntu 18.04 and Windows 10 x64. The user is correctly redirected to the 'add new attachment' page without issues.
Updated•5 years ago
|
Updated•3 years ago
|
Description
•