Bug 1598684 - Click button element with button type should do nothing; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D54367